--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-size: 14px; }
 
 html,
 body,
@@ -14,7 +15,31 @@ body,
 
 header {
   width: 100%;
-  height: 200px; }
+  height: 250px; }
+  header p {
+    width: 100%;
+    height: 150px; }
+    header p img {
+      width: 100%;
+      height: 100%; }
+  header div {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around; }
+    header div dl {
+      width: 100%;
+      height: 100%; }
+      header div dl dt {
+        width: 100%;
+        height: 70px;
+        padding: 10px 10px;
+        text-align: center; }
+        header div dl dt img {
+          width: 50px;
+          height: 50px; }
+      header div dl dd {
+        text-align: center; }
 
 main {
   flex: 1;
