--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,6 +3,7 @@
     padding: 0;
     list-style: none;
     box-sizing: border-box;
+    font-size: 14px;
 }
 
 html,
@@ -16,7 +17,38 @@ body,
 
 header {
     width: 100%;
-    height: 200px;
+    height: 250px;
+    p {
+        width: 100%;
+        height: 150px;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    div {
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: space-around;
+        dl {
+            width: 100%;
+            height: 100%;
+            dt {
+                width: 100%;
+                height: 70px;
+                padding: 10px 10px;
+                text-align: center;
+                img {
+                    width: 50px;
+                    height: 50px;
+                }
+            }
+            dd {
+                text-align: center;
+            }
+        }
+    }
 }
 
 main {
