--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -28,3 +28,22 @@ footer {
     width: 100%;
     height: 50px;
 }
+.top{
+    padding: 10px;
+  }
+  .top_list{
+      display: flex;
+      flex-flow: wrap;
+  }
+  .top_list dl{
+    width: 27%;
+    margin: 10px;
+  }
+  .top_list dl dt img{
+    width: 100%;
+    height: 80px;
+  }
+  .top_list dl dd{
+    height: 20px;
+    overflow: hidden;
+  }
