--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 html,
 body,
@@ -10,35 +11,44 @@ body,
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 header {
   width: 100%;
-  height: 200px; }
+  height: 200px;
+}
 
 main {
   flex: 1;
-  overflow: auto; }
+  overflow: auto;
+}
 
 footer {
   width: 100%;
-  height: 50px; }
-.top{
+  height: 50px;
+}
+
+.top {
   padding: 10px;
 }
-.top_list{
-    display: flex;
-    flex-flow: wrap;
+
+.top_list {
+  display: flex;
+  flex-flow: wrap;
 }
-.top_list dl{
+
+.top_list dl {
   width: 27%;
   margin: 10px;
 }
-.top_list dl dt img{
+
+.top_list dl dt img {
   width: 100%;
   height: 80px;
 }
-.top_list dl dd{
+
+.top_list dl dd {
   height: 20px;
   overflow: hidden;
 }
