--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 html,
 body,
@@ -10,16 +11,47 @@ body,
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 header {
   width: 100%;
-  height: 200px; }
+  height: 200px;
+}
 
 main {
   flex: 1;
-  overflow: auto; }
+  overflow: auto;
+}
 
 footer {
   width: 100%;
-  height: 50px; }
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer dl {
+  width: 20%;
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+footer dl dt {
+  width: 20px;
+  height: 20px;
+}
+
+footer dl dt img {
+  width: 100%;
+  height: 100%;
+}
+
+footer dl dd {
+  margin-top: 5px;
+  font-size: 14px;
+}
