--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -27,4 +27,27 @@ main {
 footer {
     width: 100%;
     height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    dl {
+        width: 20%;
+        height: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        dt {
+            width: 20px;
+            height: 20px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        dd {
+            margin-top: 5px;
+            font-size: 14px;
+        }
+    }
 }
