--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -16,12 +16,37 @@ body,
 
 header {
     width: 100%;
-    height: 200px;
+    height: 250px;
 }
 
 main {
     flex: 1;
     overflow: auto;
+    .bottom{
+        .jp{
+            height: 50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            span{
+                padding: 0 10px;
+                box-sizing: border-box;
+            }
+        }
+        .every{
+            display: flex;
+            padding: 10px;
+            box-sizing: border-box;
+            dt{
+                width: 100px;
+                height: 120px;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+    }
 }
 
 footer {
